test/ddc-spec/error/01-ErrorExp/44-CaseOverlapping/Main.ds

module Main where

foo (x: Nat#)
 = case x of
        0       -> True
        0       -> False
        _       -> False
